tests/core/snapshots/test-enum-default.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
  @server(port: 8080)
  @upstream(baseURL: "http://localhost:50051", httpCache: 42)
  @link(id: "news", src: "./service.proto", type: Protobuf) {
  query: Query
}

enum Status {
  DRAFT
  NOT_DEFINED
  PUBLISHED
}

type News {
  foo: Status
  id: Int
}

type NewsData {
  news: [News]
}

type NewsInput {
  id: Int
}

type Query {
  news: NewsData! @grpc(method: "news.NewsService.GetAllNews")
}
