tests/core/snapshots/test-enum-description.md_1.snap
---
source: tests/core/spec.rs
assertion_line: 203
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "foo": "BAZ"
    }
  }
}
