tests/core/snapshots/test-enum-description.md_2.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "errors": [
      {
        "message": "internal: invalid item for enum \"Foo\"",
        "locations": [
          {
            "line": 1,
            "column": 9
          }
        ],
        "path": [
          "foo"
        ]
      }
    ]
  }
}
