tests/core/snapshots/test-enum-description.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
"""
Description of enum Foo
"""
enum Foo {
  BAR
  BAZ
}

type Query {
  foo(val: String!): Foo
}

schema {
  query: Query
}
