tests/core/snapshots/test-enum-empty.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "invalid type: map, expected a sequence at line 6 column 11",
    "trace": [],
    "description": null
  }
]
