tests/core/snapshots/test-enum.md_2.snap
---
source: tests/core/spec.rs
expression: response
snapshot_kind: text
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": null,
    "errors": [
      {
        "message": "internal: invalid item for enum \"Foo\"",
        "locations": [
          {
            "line": 1,
            "column": 9
          }
        ],
        "path": [
          "foo"
        ]
      }
    ]
  }
}
