tests/core/snapshots/test-enum.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
enum Foo {
  BAR
  BAZ
}

type Query {
  foo(val: String!): Foo
}

schema {
  query: Query
}
