tests/core/snapshots/test-expr-error.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "expected field to be non-nullable",
    "trace": [
      "@expr",
      "age"
    ],
    "description": null
  }
]
